# Simple-pseudoasm-emulator

./: CMakeLists.txt  main.cpp  pragram1.txt  program.txt
commands/: CMakeLists.txt  commands.cpp
commands/include/: commands.h
emulator/: CMakeLists.txt  emulator.cpp
emulator/include/: emulator.h
exceptions/: CMakeLists.txt  exceptions.cpp
exceptions/include/: exceptions.h
memory/: CMakeLists.txt  memory.cpp
memory/include/: memory.h
parser/: CMakeLists.txt  parser.cpp
parser/include/: parser.h
preprocessor/: CMakeLists.txt  preprocessor.cpp
preprocessor/include/: preprocessor.h
serializer/: CMakeLists.txt  serializer.cpp
serializer/include/: serializer.h
stack/: CMakeLists.txt  stack.h
